--- a/index.html
+++ b/index.html
@@ -5,23 +5,97 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/mystyles.css">
     <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Beth</h1>
-    <p>...an aspiring data professional</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <p class="front-text">...an aspiring data professional</p>
+    <img class="down-arrow" src="images/down-arrow.png" alt="down-img">
 </div>
-<div class="mid-container">
+<div class="middle-container">
+  <div class="profile">
+    <img class="profile" src="images/image.jpg" alt="profile-img">
+    <h2>Hello.</h2>
+    <p> I'm currently nearing the end of my MSc in Computer Science with Data Analytics with the University of York,
+        I just have my thesis left! I've been living in Paris, France since 2020 and have been completing my degree
+        online. Since November 2022, I have been freelancing some data analytics for a telecoms company. I'm looking
+        forward to completing my degree and finding a full time role to launch my career here in Paris.
+    </p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
 
+      <img class="computer" src="images/analytics.png" alt="comp-img">
+      <h3>Technical skills</h3>
+      <table>
+          <tr>
+              <td>Python</td>
+              <td>This the language I enjoy the most. I've done projects with numpy, pandas, sklearn, nltk & tkinter</td>
+          </tr>
+          <tr>
+              <td>SQl</td>
+              <td>I can create queries and use outputs to present visuals in Tableau</td>
+          </tr>
+          <tr>
+              <td>Microsoft Office</td>
+              <td>Proficient in daily use</td>
+          </tr>
+          <tr>
+              <td>R</td>
+              <td>I know the basics. For the moment I'm focusing more on Python but would love to extend my knowledge here</td>
+          </tr>
+          <tr>
+              <td>Java</td>
+              <td>Created an app in my Algorithms & Data Structures module.</td>
+          </tr>
+          <tr>
+              <td>Html & Css</td>
+              <td>I created this website</td>
+          </tr>
+      </table>
+    </div>
+    <div class="skill-row">
+      <img class="team" src="images/meeting.png" alt="team-img">
+      <h3>Soft skills</h3>
+      <table>
+          <tr>
+              <td>Self-starter</td>
+              <td>Motivation is internally driven and proven during my online masters degree</td>
+          </tr>
+          <tr>
+              <td>Cross-cultural communication</td>
+              <td>Honed by my more than five years abroad and time spent at two international business schools</td>
+          </tr>
+          <tr>
+              <td>Adaptable</td>
+              <td>I've lived in five different countries from periods of three months to over two and a half years</td>
+          </tr>
+          <tr>
+              <td>Public speaking</td>
+              <td>Spoken at a student sustainability forum and given a guest lecture on behalf of my student association</td>
+          </tr>
+      </table>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>Or just find me online:</h3>
+    <p>Whether to give feedback on this site, just to chat or if you have an interesting opportunity to propose
+    to me, I would love to hear from you</p>
+    <a class="btn" href="mailto:colwilljenkins@gmail.com">CONTACT ME</a>
+  </div>
 </div>
-<div class="low-container">
-
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/in/bethcolwilljenkins/">LinkedIn</a>
+  <a class="footer-link" href="https://github.com/colwilljenkins/">Github</a>
+  <p>© 2023 Bethany Jenkins.</p>
 </div>
 </body>
 </html>
