Website design update

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 <div class="top-container">
     <h1>I'm Beth</h1>
     <p class="front-text">...an aspiring data professional</p>
-    <img class="down-arrow" src="images/down-arrow.png" alt="down-img">
+    <div class="image-container">
+        <img class="front-img1" src="images/environment-protection.png" alt="icon_img">
+        <img class="front-img2" src="images/worker.png" alt="icon_img">
+        <img class="front-img3" src="images/yoga.png" alt="icon_img">
+        <img class="down-arrow" src="images/down-arrow.png" alt="down-img">
+    </div>
+<img class="down-arrow" src="images/down-arrow.png" alt="down-img">
 </div>
 <div class="middle-container">
   <div class="profile">
     <img class="profile" src="images/image.jpg" alt="profile-img">
     <h2>Hello.</h2>
-    <p> I'm currently nearing the end of my MSc in Computer Science with Data Analytics with the University of York,
+    <p > I'm currently nearing the end of my MSc in Computer Science with Data Analytics with the University of York,
         I just have my thesis left! I've been living in Paris, France since 2020 and have been completing my degree
         online. Since November 2022, I have been freelancing some data analytics for a telecoms company. I'm looking
         forward to completing my degree and finding a full time role to launch my career here in Paris.
@@ -29,10 +35,10 @@
   <hr>
   <div class="skills">
     <h2>My Skills.</h2>
+      <h3>Technical Skills</h3>
     <div class="skill-row">
 
-      <img class="computer" src="images/analytics.png" alt="comp-img">
-      <h3>Technical skills</h3>
+      <img class="computer-image" src="images/analytics.png" alt="comp-img">
       <table>
           <tr>
               <td>Python</td>
@@ -60,9 +66,9 @@
           </tr>
       </table>
     </div>
+      <h3>Soft Skills</h3>
     <div class="skill-row">
-      <img class="team" src="images/meeting.png" alt="team-img">
-      <h3>Soft skills</h3>
+      <img class="team-image" src="images/meeting.png" alt="team-img">
       <table>
           <tr>
               <td>Self-starter</td>
@@ -86,16 +92,18 @@
   <hr>
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>Or just find me online:</h3>
     <p>Whether to give feedback on this site, just to chat or if you have an interesting opportunity to propose
     to me, I would love to hear from you</p>
     <a class="btn" href="mailto:colwilljenkins@gmail.com">CONTACT ME</a>
   </div>
-</div>
-<div class="bottom-container">
+    <br>
+    <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/bethcolwilljenkins/">LinkedIn</a>
   <a class="footer-link" href="https://github.com/colwilljenkins/">Github</a>
-  <p>© 2023 Bethany Jenkins.</p>
+  <p class="name-tag">© 2023 Bethany Jenkins.</p>
+        <a class="name-tag" href="https://www.flaticon.com/free-stickers/trip" title="Stickers">Stickers created by paulalee</a>
+        <a class="name-tag" href="https://www.flaticon.com/free-icons/computer" title="computer icons">Computer and Discussion icons created by Freepik</a>
+    </div>
 </div>
 </body>
 </html>
